# udvary-et-al-2022

./: .gitignore  LICENSE  README.md
analysis/: analyzed_data.txt  readme.md
analysis/functions/: collapse64MotifTo16Motif.m  computeMotifProbabilitiesBasedOnDoubletMotifs.m  computeNumSynapses.m  computeParameters.m  distPointToLine.m  extractEdgeMotifProbabilityGivenChainMotif.m  generateCellTypeList.m  generateRandomChainMotif.m  getBarrelDefinition.m  getMotifSpectrum.m  mergeSurface.m  readAmira.m  readAmiraSurface.m  readBarrelDefinitionSpreadSheet.m  readCellTypesCSV.m  readGrid.m  readNeuronsCSV.m  readRegionsCSV.m  totalMSD.m  writeAmiraSurface.m  writeBoxAmiraSurface.m  writeSpatialGraphContour.m  writeSurfacesBasedOnDensity.m
analysis/math_model_corr_connectivity/: getBlueRedColorMatrix.m  getTheoremPrediction.m  main.m  simulateTheorem.m
analysis/preprocessing/: extractC2matrix.m  extractCorrelations.m  extractSynDensityDepth.m  extractTripletMotifsAll.m  getContributingCellTypes.m  getOutsideInnervation.m  getPathLength.m  intermediate_data.txt  process_connections_overlap.m  randomTest_Corr.m  samplingDepAnalysis.m  saveCellTable.m  saveInnervationMatrixC2.m  saveInnervationMatrixC2_INHLayers.m  saveTripletAnalysisAsTable.m
analysis/preprocessing/cpp/alignSpatialGraphToSoma/: CMakeLists.txt
analysis/preprocessing/cpp/alignSpatialGraphToSoma/src/: alignSpatialGraphToSoma.cpp  helper.h
analysis/preprocessing/cpp/computeInnervation/: CMakeLists.txt
analysis/preprocessing/cpp/computeInnervation/src/: barrel_field.cpp  barrel_field.h  ccmakeSettings.txt  computeInnervationBetweenCells.cpp
analysis/preprocessing/cpp/truncateCell/: CMakeLists.txt
analysis/preprocessing/cpp/truncateCell/src/: amiraReader.h  basics.h  truncateCell.cpp
analysis/preprocessing/higherOrder/: runFullyRecurrentMotifs_DenseModel.m  runRandomChainMotifs_DenseModel.m  saveNumberConnectionPerin_SliceEmulation.m
analysis/preprocessing/robustness_morphologies/: extractCellTypeVariability.m  processAxonCellTypeVariability.m  processDendriteCellTypeVariability.m
analysis/preprocessing/validation/: L5PT_doublets_slice.m  L5PT_triplets_slice.m  extractMeasuredCP.m  process_sliced_L23EXC.m  process_sliced_L5PT.m  saveMeasuredDataSantuy.m  save_L23EXC_ISDist.m  save_L5PT_ISDist.m
analysis/preprocessing/variability/: mergeVariabilityAnalysis.m  mergeVariabilityAnalysis_DiffSoma.m  save_variabilityAnalysis_DiffSoma.m  variabilityAnalysis_DiffMorphSamples.m
analysis/visualization/: readme.md  visualizeConnectivityDistribution_CellTypeExample_EmpiricalDist.m  visualizeConnectivityDistribution_SamplingExample_EmpiricalDist.m  visualizeDeviationAcrossLayers_H01.m  visualizeDeviationPerMotif_H01.m  visualizeMeasuredVsPredictedCorrPlot.m  visualizeMeasuredVsPredicted_ExamplesCP.m  visualizeMotifsAcrossNodes_Dev.m  visualizeNumConnectionsPerin_ExampleMotif.m  visualizeTriplets_vS1.m  visualizeValidation_L5PT_ISDist_Perin.m  visualize_L5PTDoubletMotifs.m  visualize_L5PTTripletMotifs.m  visualize_PetersRule_Branches_vs_Boutons.m  visualize_PetersRule_Overlap_vs_Connected.m  visualize_TripletProperties_2D.m  visualize_TripletProperties_3D.m  visualize_Triplet_vs_Theory.m  visualize_connections_overlap.m  visualize_connections_per_pair.m  visualize_connections_per_pair_100_100_50.m  visualize_example_CPdistribution.m  visualize_inDegree_examples.m
analysis/visualization/Supplements/: visualizeExampleTriplets.m  visualizeLength_vS1.m  visualizeMorphVariability.m  visualizeSynapseDensityComparisonEM.m  visualizeValidation_L23EXC_ISDist_Avermann.m  visualize_InDegreeCorrelationBoxPlot.m  visualize_MorphRobustness.m  visualize_VariabilityCP.m  visualize_cube_stats_len_syn_branches.m  visualize_cube_stats_pathlength_contribution.m  visualize_inDegree_examples_2.m  visualize_theorem.m
analysis/visualization/forIllustration/: extract_exampleNetwork.m  visualize_ExampleNetworkGraphs.m
structural_model/: agg_DSC.py  agg_pre_mp.py  agg_pst_mp.py  calc_DSC_mp.py  calc_features_mp.py  constants.py  convert_scalar_field.py  env.yml  eval_branch_pairs_synapses.py  eval_cellular.py  eval_cluster.py  eval_composition.py  eval_connections_overlap.py  eval_matrix.py  eval_motifs.py  eval_overlapping_connected.py  eval_representative_cell.py  eval_variability.py  model_data.txt  motif_combinations.py  readme.md  run.py  util.py  util_amira.py  util_amira_write.py  util_batch.py  util_cache.py  util_citations.py  util_empirical.py  util_feature_IO.py  util_features_mp.py  util_filter.py  util_geometry.py  util_graph.py  util_intersomatic_distance.py  util_meta.py  util_morphology.py  util_morphology_slice.py  util_stats.py  util_time.py  (+1 more)
(+20 files in other folders)
